#
# openSUSE Build Service 2.6.7
#

Updaters from any OBS 2.6 release can just ugrade the packages
and restart all services. Updaters from former releases should
read the README.UPDATERS file.

Feature backports:
==================

* none

Changes:
========

* none

Bugfixes:
=========

* [webui] drop hardcoded opensuse email adress and link
* [webui] fix XSS attack vector via User.realname (bnc#950932)
* [webui] fix XSS attack vector via Projec.title (bnc#950932)