@@ -45,8 +45,8 @@
         <option value="14pt"> 14pt</option>
       </select>
       <select class="tools select" id="mode_<%= uid %>" onchange="editors[<%= uid %>].updateMode(this)">
-        <option id="changes_<%= uid %>" value="changes">changes</option>
-        <option id="spec_<%= uid %>" value="spec">spec</option>
+        <option id="rpm-changes_<%= uid %>" value="rpm-changes">changes</option>
+        <option id="rpm-pec_<%= uid %>" value="rpm-spec">spec</option>
         <option id="diff_<%= uid %>" value="diff">diff</option>
         <option id="shell_<%= uid %>" value="text/x-sh">shell</option>
         <option id="prjconf_<%= uid %>" value="prjconf">projconf</option>
