@@ -22,3 +22,4 @@ Bugfixes:
 * [webui] drop hardcoded opensuse email adress and link
 * [webui] fix XSS attack vector via User.realname (bnc#950932)
 * [webui] fix XSS attack vector via Projec.title (bnc#950932)
+* [webui] add spec & changes file code highlighting
